add refesh icon for scanbot on

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <img src="./asset/images/Info.svg" width="24" height="24" alt="help">
           </div>
         </div>
-        <button id="turn__scanbot" width="150" style="font-size: 12px;">Turn on/turn off scanbot</button>
+        <button id="turn__scanbot" width="150" style="font-size: 12px;">
+          <span>Turn off scanbot</span>
+        </button>
         <div class="dropdown" id="lightdropdown">
           <div class="dropdown__select">
             <span class="dropdown__selected">Camera 01</span>
