change text button scanbot

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
         <button id="turn__scanbot" width="150" style="font-size: 12px;">
-          <span>Turn off scanbot</span>
+          <span>Turn off auto scan</span>
         </button>
         <div class="dropdown" id="lightdropdown">
           <div class="dropdown__select">
